# batsat-ocaml

./: .gitconfig  .travis.yml  Cargo.toml  Makefile  README.md  batsat.opam  build_rust.sh  diamond_solver.sh  dune  index.html
.cargo/: config.toml
.github/workflows/: main.yml
batsat/: index.html
batsat/Batsat/: index.html
batsat/Batsat/Lit/: index.html
examples/: dune  par_solver.ml  solver.ml
src/: Batsat.ml  Batsat.mli  Batsat_backtrackable_ref.ml  dune  lib.rs  stubs.c
src/clib/: Cargo.toml  dune
src/clib/src/: lib.rs
src/diamond_solver/: Atom.ml  Atom.mli  Pb.ml  Sexp.ml  Sexp_lex.mll  Solver.ml  Solver.mli  Term.ml  Term.mli  diamond_solver.ml  dune
src/icnf-solve/: Icnf_solve.ml  common.ml  dune  solver.ml  solver_minisat.dummy.ml  solver_minisat.real.ml
src/sudoku/: Backtrackable_ref.ml  dune  sudoku_solve.ml
tests/: Makefile  dune  test1.ml
tests/regression/: dune  regression1.expected  regression2.expected
