[package]
name = "batsat-stubs"
version = "0.1.0"
authors = ["Simon Cruanes"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]

once_cell = "^1.8"
ocaml = "^0.22"
ocaml-sys = "^0.22"
batsat = "^0.5"
#batsat = { git="https://github.com/c-cube/batsat", rev="1268e344922724d03ae192f8f70869644520c721" }

[workspace]

[profile.release]
debug = 1
lto = "thin"
