opam-version: "2.0"
version: "0.7"
license: "MIT"
author: "simon.cruanes.2007@m4x.org"
synopsis: "OCaml bindings for batsat, a SAT solver in rust"
maintainer: "simon.cruanes.2007@m4x.org"
build: [
  ["./build_rust.sh"]
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
# TODO: add dependency on cargo?
depends: [
  "ocaml" { >= "4.07.0" }
  "dune" {>= "2.6" }
  "odoc" {with-doc}
  "containers" {with-test}
  "conf-rust-2018" {build}
]
tags: [ "minisat" "solver" "SAT" ]
homepage: "https://github.com/c-cube/batsat-ocaml/"
dev-repo: "git+https://github.com/c-cube/batsat-ocaml.git"
bug-reports: "https://github.com/c-cube/batsat-ocaml/issues"
