
(rule
 ; (targets libbatsat_stubs%{ext_lib})
 (targets libbatsat_stubs.a dllbatsat_stubs%{ext_dll} liblibbatsat.a)
 (deps (:lib ../target/release/libbatsat_stubs.a) (:dll ../target/release/libbatsat_stubs%{ext_dll}))
 (action
   (progn
     (run cp %{lib} .)
     (run ar rcs liblibbatsat.a)
     (run cp %{dll} dllbatsat_stubs%{ext_dll}))))

(library
  (name batsat)
  (public_name batsat)
  (libraries threads)
  (wrapped false)
  (modules batsat)
  (foreign_stubs
    (language c)
    (flags :standard -fPIC -std=c99))
  (c_library_flags :standard -ldl -lpthread) ; -lbatsat_c) ; -static)
  ;(modes native)
  (foreign_archives libbatsat) ; custom!
  ;(c_names batsat_stubs)
  (no_dynlink)
  )

(env
  (_ (flags :standard -safe-string -warn-error -a+8)))
