
(rule
 ; (targets libbatsat_stubs%{ext_lib})
 (targets libbatsat_stubs.a dllbatsat_stubs%{ext_lib} liblibbatsat.a)
 (deps (:lib ../target/release/libbatsat_stubs.a)) ;(:dll ../target/release/libbatsat_stubs%{ext_lib}))
 (action
   (progn
     (run cp %{lib} .)
     ;(with-stdout-to dummy.c (echo ""))
     ;(run %{cc} dummy.c -c -o dummy.o)
     ;(run ar rcs liblibbatsat.a dummy.o)
     (run cp %{lib} liblibbatsat.a)
     (run cp %{lib} dllbatsat_stubs%{ext_lib})
     )))

(library
  (name batsat)
  (public_name batsat)
  (libraries threads)
  (wrapped false)
  (modules batsat)
  (c_library_flags :standard -ldl -lpthread) ; -lbatsat_c) ; -static)
  ;(modes native)
  (foreign_archives libbatsat) ; custom!
  ;(c_names batsat_stubs)
  (no_dynlink)
  )

(env
  (_ (flags :standard -safe-string -warn-error -a+8)))
