
(rule
 ; (targets libbatsat_stubs%{ext_lib})
 (targets libbatsat_stubs.a liblibbatsat.a)
 (deps (:lib ../target/release/libbatsat_stubs.a)) ;(:dll ../target/release/libbatsat_stubs%{ext_lib}))
 (action
   (progn
     (run cp %{lib} .)
     (run cp %{lib} liblibbatsat.a)
     )))

(library
  (name batsat)
  (public_name batsat)
  (libraries threads)
  (wrapped false)
  (modules batsat)
  (c_library_flags :standard -ldl -lpthread)
  (foreign_archives libbatsat)
  (no_dynlink)
  )

(env
  (_ (flags :standard -safe-string -warn-error -a+8)))
